--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,11 @@
     <artifactId>selenium-java</artifactId>
     <version>3.0.1</version>
 </dependency>
-	
+	 <dependency>
+      <groupId>com.google.guava</groupId>
+      <artifactId>guava</artifactId>
+      <version>16.0.1</version>
+    </dependency>
 <dependency>
   <groupId>org.testng</groupId>
   <artifactId>testng</artifactId>
@@ -53,6 +57,14 @@
     <artifactId>log4j</artifactId>
     <version>1.2.17</version>
 </dependency>
+
+<!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-support -->
+<dependency>
+    <groupId>org.seleniumhq.selenium</groupId>
+    <artifactId>selenium-support</artifactId>
+    <version>2.0a7</version>
+</dependency>
+
   	
   </dependencies>
 </project>
